# chexit

./: LICENSE.md  README.md  chexit.go  chexit.py  go.mod  logger.go  main.go  parse.go  pyproject.toml  util.go
chexit/: chexit.py
src/: string.zig
